--- a/src/components/PokemonScreen/_styles.scss
+++ b/src/components/PokemonScreen/_styles.scss
@@ -10,8 +10,6 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  opacity: 0;
-  animation: appear 0.2s ease-in-out forwards;
 }
 
 @media only screen and (min-width: 350px) {
