--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -99,9 +99,6 @@ html {
   align-items: center;
   justify-content: center;
   text-align: center;
-  opacity: 0;
-  -webkit-animation: appear 0.2s ease-in-out forwards;
-          animation: appear 0.2s ease-in-out forwards;
 }
 
 @media only screen and (min-width: 350px) {
@@ -124,15 +121,13 @@ html {
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.452) 0px 3px 10px;
   min-height: 138px;
-  opacity: 0;
-  -webkit-animation: appear 0.2s ease-in-out 0.1s forwards;
-          animation: appear 0.2s ease-in-out 0.1s forwards;
+  padding-top: 10px;
 }
 
 .card-image-wrapper {
   display: flex;
   justify-content: center;
-  padding-top: 10px;
+  min-height: 96px;
 }
 .card-image-wrapper img {
   -webkit-user-drag: none;
